--- a/css/cards.css
+++ b/css/cards.css
@@ -101,7 +101,7 @@
 .product-card .price {
   font-weight: 700;
   font-size: 0.98rem;
-  color: #0070f3; /* Brand-blå */
+  color: #111827; /* sort/grå premium, ikke blå */
 }
 
 /* Gammel pris */
