--- a/css/base/typography.css
+++ b/css/base/typography.css
@@ -19,3 +19,15 @@ body {
   font-size: 0.9rem;
   min-height: 40px;
 }
+
+.highlighted-brands h2,
+.all-brands h2 {
+  text-align: center;
+  font-size: 1.6rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+
+
+
