--- a/css/base/typography.css
+++ b/css/base/typography.css
@@ -28,6 +28,11 @@ body {
   margin-bottom: 1rem;
 }
 
-
+.favorites-section h2 {
+  text-align: center;
+  font-size: 1.8rem;
+  margin-bottom: 2rem;
+  font-weight: 700;
+}
 
 
