--- a/css/base/typography.css
+++ b/css/base/typography.css
@@ -35,4 +35,18 @@ body {
   font-weight: 700;
 }
 
+.section-padding h2 {
+  font-size: 1.8rem;
+  font-weight: 700;
+  color: #111;
+  margin-bottom: 1.5rem;
+}
+
+
+
+
+
+
+
+
 
