--- a/css/base/typography.css
+++ b/css/base/typography.css
@@ -42,7 +42,11 @@ body {
   margin-bottom: 1.5rem;
 }
 
-
+.featured-products h2 {
+  margin-bottom: 1.5rem;
+  font-size: 1.8rem;
+  font-weight: 700;
+}
 
 
 
