--- a/css/layout/grid.css
+++ b/css/layout/grid.css
@@ -6,3 +6,18 @@
   max-width: 1200px;
   margin: auto;
 }
+
+.favorites-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 0.8rem;
+  justify-content: center; /* sentrerer gridet når det ikke fyller hele raden */
+  justify-items: center;
+}
+
+
+
+
+
+
+
