--- a/css/layout/grid.css
+++ b/css/layout/grid.css
@@ -59,7 +59,18 @@
   padding: 0 20px;
 }
 
+@media (max-width: 900px) {
+  .universe-grid {
+    flex-wrap: wrap; /* 2 + 2 layout */
+  }
+}
 
+@media (max-width: 600px) {
+  .universe-grid {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 
 
 
